--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1>Hello!</h1>
+<h1>Welcome to Numeria</h1>
+<h2>A web app to teach children and everyone that wants, to count !</h2>
+<p>Coming Soon, to a browser near you</p>
