--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>Welcome to Numeria</h1>
-<h2>A web app to teach children and everyone that wants, to count !</h2>
-<p>Coming Soon, to a browser near you</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>numeria</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
